feat: Support GraalVM JDK 25